--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "wip:test:test": "cross-env TEST_ENV=test cucumber-js --require-module ts-node/register --tags '@wip'",
     "wip:test:dev": "cross-env TEST_ENV=dev cucumber-js --require-module ts-node/register --tags '@wip'",
     "wip:test:staging": "cross-env TEST_ENV=staging cucumber-js --require-module ts-node/register --tags '@wip'",
-    
     "test:default": "cucumber-js --profile default --retry 2",
     "test:rerun": "cucumber-js --profile rerun   --retry 2",
-    
     "generate:allure-report": "npx allure generate allure-results --clean -o allure-report",
-    "open:allure-report": "npx allure open allure-report"
+    "open:allure-report": "npx allure open allure-report",
+    "test:run": "cross-env TEST_ENV=dev cucumber-js --require-module ts-node/register"
   },
   "dependencies": {
     "playwright": "^1.48.0"
