--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "name": "playwright-cucumber-bdd-ts",
   "version": "1.0.0",
   "scripts": {
-   "parallel:run:in:uat": "cross-env TEST_ENV=uat cucumber-js --require cucumber.js --parallel 4",
-"wip:in:uat": "cross-env TEST_ENV=uat cucumber-js --require cucumber.js --tags '@wip'",
-"wip:test:test": "cross-env TEST_ENV=test cucumber-js --require cucumber.js --tags '@wip'",
-"wip:test:dev": "cross-env TEST_ENV=dev cucumber-js --require cucumber.js --tags '@wip'",
-"try:test:dev": "cross-env TEST_ENV=dev cucumber-js --require cucumber.js --tags '@try'",
-"wip:test:staging": "cross-env TEST_ENV=staging cucumber-js --require cucumber.js --tags '@wip'",
-"test:default": "cucumber-js --require cucumber.js --profile default --retry 2",
-"test:rerun": "cucumber-js --require cucumber.js --profile rerun --retry 2",
-"test:run": "cross-env TEST_ENV=dev cucumber-js --require cucumber.js"
-
+    "parallel:run:in:uat": "cross-env TEST_ENV=uat cucumber-js --require cucumber.js --parallel 4",
+    "wip:in:uat": "cross-env TEST_ENV=uat cucumber-js --require cucumber.js --tags '@wip'",
+    "wip:test:test": "cross-env TEST_ENV=test cucumber-js --require cucumber.js --tags '@wip'",
+    "wip:test:dev": "cross-env TEST_ENV=dev cucumber-js --require cucumber.js --tags '@login'",
+    "try:test:dev": "cross-env TEST_ENV=dev cucumber-js --require cucumber.js --tags '@try'",
+    "wip:test:staging": "cross-env TEST_ENV=staging cucumber-js --require cucumber.js --tags '@wip'",
+    "test:default": "cucumber-js --require cucumber.js --profile default --retry 2",
+    "test:rerun": "cucumber-js --require cucumber.js --profile rerun --retry 2",
+    "test:run": "cross-env TEST_ENV=dev cucumber-js --require cucumber.js"
   },
   "dependencies": {
     "playwright": "^1.48.0"
@@ -22,6 +21,7 @@
     "allure-commandline": "^2.34.1",
     "allure-cucumberjs": "^3.4.2",
     "allure-js-commons": "^3.4.1",
+    "allure-playwright": "^3.0.0",
     "cross-env": "^10.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
