--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ node_modules/
 /blob-report/
 /playwright/.cache/
 /playwright/.auth/
+
+# Reports and results
+allure-results/
+allure-reports/
+reports/
