feat: Add Playwright worker configuration via environment variable and include config file in tsconfig.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,15 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["node", "@cucumber/cucumber"]
+    "types": [
+      "node",
+      "@cucumber/cucumber"
+    ]
   },
-  "include": ["features/**/*.ts", "support/**/*.ts", "steps/login.steps.ts"]
+  "include": [
+    "features/**/*.ts",
+    "support/**/*.ts",
+    "steps/login.steps.ts",
+    "playwright.config.ts"
+  ]
 }
